enhance(autocomplete): adds z-index to dropdown, prevents progress bar on non-promise responses

--- a/src/components/autocomplete/autocomplete.scss
+++ b/src/components/autocomplete/autocomplete.scss
@@ -156,6 +156,7 @@ md-autocomplete {
     padding: 0;
     overflow: auto;
     max-height: 41px * 5.5;
+    z-index: $z-index-backdrop - 1;
     li {
       border-top: 1px solid #ddd;
       padding: 0 15px;
